[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/board.png" type="Texture" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="status" type="Label" parent="."]
margin_left = 8.0
margin_top = 406.0
margin_right = 344.0
margin_bottom = 426.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave_game" type="Button" parent="."]
margin_left = 352.0
margin_top = 400.0
margin_right = 464.0
margin_bottom = 432.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="board" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
[connection signal="pressed" from="leave_game" to="." method="on_leave_game_pressed"]
[connection signal="timeout" from="Timer" to="." method="on_piece_fall"]
